---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/select_parallel.sql
snapshot_kind: text
---
SELECT pg_stat_force_next_flush();

SELECT
  parallel_workers_to_launch
  AS parallel_workers_to_launch_before,
  parallel_workers_launched
  AS parallel_workers_launched_before
FROM
  pg_stat_database
WHERE
  datname = current_database();

CREATE FUNCTION sp_parallel_restricted(INT)
RETURNS INT
AS 'begin return $1; end'
LANGUAGE "plpgsql"
PARALLEL RESTRICTED;

BEGIN;

SET parallel_setup_cost = 0;

SET parallel_tuple_cost = 0;

SET min_parallel_table_scan_size = 0;

SET max_parallel_workers_per_gather = 4;

SELECT round(AVG(aa)), SUM(aa) FROM a_star;

SELECT round(AVG(aa)), SUM(aa) FROM a_star AS a1;

ALTER TABLE c_star
  SET (parallel_workers = 0);

ALTER TABLE d_star
  SET (parallel_workers = 0);

SELECT round(AVG(aa)), SUM(aa) FROM a_star;

SELECT round(AVG(aa)), SUM(aa) FROM a_star AS a2;

ALTER TABLE a_star
  SET (parallel_workers = 0);

ALTER TABLE b_star
  SET (parallel_workers = 0);

ALTER TABLE e_star
  SET (parallel_workers = 0);

ALTER TABLE f_star
  SET (parallel_workers = 0);

SELECT round(AVG(aa)), SUM(aa) FROM a_star;

SELECT round(AVG(aa)), SUM(aa) FROM a_star AS a3;

ALTER TABLE a_star
  RESET (parallel_workers);

ALTER TABLE b_star
  RESET (parallel_workers);

ALTER TABLE c_star
  RESET (parallel_workers);

ALTER TABLE d_star
  RESET (parallel_workers);

ALTER TABLE e_star
  RESET (parallel_workers);

ALTER TABLE f_star
  RESET (parallel_workers);

SET enable_parallel_append = off;

SELECT round(AVG(aa)), SUM(aa) FROM a_star;

SELECT round(AVG(aa)), SUM(aa) FROM a_star AS a4;

RESET enable_parallel_append;

CREATE FUNCTION sp_test_func()
RETURNS SETOF TEXT
AS ' select ''foo''::varchar union all select ''bar''::varchar '
LANGUAGE "sql"
STABLE;

SELECT sp_test_func() ORDER BY 1;

CREATE TABLE part_pa_test (
  a INT,
  b INT
)
PARTITION BY RANGE(a);

CREATE TABLE part_pa_test_p1
PARTITION OF part_pa_test
FOR VALUES FROM (minvalue) TO (0);

CREATE TABLE part_pa_test_p2
PARTITION OF part_pa_test
FOR VALUES FROM (0) TO (maxvalue);

SELECT
  (
    SELECT
      MAX(
        (
          SELECT
            pa1.b
          FROM
            part_pa_test AS pa1
          WHERE
            pa1.a = pa2.a
        )
      )
  )
FROM
  part_pa_test AS pa2;

DROP TABLE "part_pa_test";

SET parallel_leader_participation = off;

SELECT COUNT(*) FROM tenk1 WHERE stringu1 = 'GRAAAA';

SELECT COUNT(*) FROM tenk1 WHERE stringu1 = 'GRAAAA';

SET max_parallel_workers = 0;

SELECT COUNT(*) FROM tenk1 WHERE stringu1 = 'GRAAAA';

SELECT COUNT(*) FROM tenk1 WHERE stringu1 = 'GRAAAA';

RESET max_parallel_workers;

RESET parallel_leader_participation;

ALTER TABLE tenk1
  SET (parallel_workers = 4);

SELECT
  sp_parallel_restricted(unique1)
FROM
  tenk1
WHERE
  stringu1 = 'GRAAAA'
ORDER BY 1;

SELECT length(stringu1) FROM tenk1 GROUP BY length(stringu1);

SELECT length(stringu1) FROM tenk1 GROUP BY length(stringu1);

SELECT stringu1, COUNT(*) FROM tenk1 GROUP BY stringu1 ORDER BY stringu1;

SELECT
  SUM(sp_parallel_restricted(unique1))
FROM
  tenk1
GROUP BY sp_parallel_restricted(unique1);

PREPARE tenk1_count
(INT)
AS SELECT
  COUNT(unique1)
FROM
  tenk1
WHERE
  hundred > $1;;

EXPLAIN (COSTS 'off') EXECUTE tenk1_count (1);

EXECUTE tenk1_count (1);

DEALLOCATE tenk1_count;

ALTER TABLE tenk2
  SET (parallel_workers = 0);

SELECT
  COUNT(*)
FROM
  tenk1
WHERE
  NOT (two, four) IN
  (
    SELECT
      hundred,
      thousand
    FROM
      tenk2
    WHERE
      thousand > 100
  );

SELECT
  COUNT(*)
FROM
  tenk1
WHERE
  NOT (two, four) IN
  (
    SELECT
      hundred,
      thousand
    FROM
      tenk2
    WHERE
      thousand > 100
  );

SELECT
  *
FROM
  tenk1
WHERE
  NOT CAST(unique1 + random() AS INT) IN
  (
    SELECT ten FROM tenk2
  );

ALTER TABLE tenk2
  RESET (parallel_workers);

SET enable_indexscan = off;

SET enable_indexonlyscan = off;

SET enable_bitmapscan = off;

ALTER TABLE tenk2
  SET (parallel_workers = 2);

SELECT
  COUNT(*)
FROM
  tenk1
WHERE
  tenk1.unique1 =
  (SELECT MAX(tenk2.unique1) FROM tenk2);

SELECT
  COUNT(*)
FROM
  tenk1
WHERE
  tenk1.unique1 =
  (SELECT MAX(tenk2.unique1) FROM tenk2);

RESET enable_indexscan;

RESET enable_indexonlyscan;

RESET enable_bitmapscan;

ALTER TABLE tenk2
  RESET (parallel_workers);

SET enable_seqscan = off;

SET enable_bitmapscan = off;

SET random_page_cost = 2;

SELECT COUNT(unique1) FROM tenk1 WHERE hundred > 1;

SELECT COUNT(unique1) FROM tenk1 WHERE hundred > 1;

SELECT
  COUNT(unique1)
FROM
  tenk1
WHERE
  hundred = ANY (CAST((
    SELECT
      array_agg(i)
    FROM
      generate_series(1, 100, 15) AS i
  )
  AS INT[]));

SELECT
  COUNT(unique1)
FROM
  tenk1
WHERE
  hundred = ANY (CAST((
    SELECT
      array_agg(i)
    FROM
      generate_series(1, 100, 15) AS i
  )
  AS INT[]));

SELECT COUNT(*) FROM tenk1 WHERE thousand > 95;

SELECT COUNT(*) FROM tenk1 WHERE thousand > 95;

SET enable_material = 'false';

SELECT
  *
FROM
  (
    SELECT
      COUNT(unique1)
    FROM
      tenk1
    WHERE
      hundred > 10
  )
  AS ss
  RIGHT OUTER JOIN
    (VALUES (1), (2), (3)) AS v (x)
  ON TRUE;

SELECT
  *
FROM
  (
    SELECT
      COUNT(unique1)
    FROM
      tenk1
    WHERE
      hundred > 10
  )
  AS ss
  RIGHT OUTER JOIN
    (VALUES (1), (2), (3)) AS v (x)
  ON TRUE;

SELECT
  *
FROM
  (
    SELECT
      COUNT(*)
    FROM
      tenk1
    WHERE
      thousand > 99
  )
  AS ss
  RIGHT OUTER JOIN
    (VALUES (1), (2), (3)) AS v (x)
  ON TRUE;

SELECT
  *
FROM
  (
    SELECT
      COUNT(*)
    FROM
      tenk1
    WHERE
      thousand > 99
  )
  AS ss
  RIGHT OUTER JOIN
    (VALUES (1), (2), (3)) AS v (x)
  ON TRUE;

RESET enable_seqscan;

SET enable_indexonlyscan = off;

SET enable_indexscan = off;

ALTER TABLE tenk1
  SET (parallel_workers = 0);

ALTER TABLE tenk2
  SET (parallel_workers = 1);

SELECT
  COUNT(*)
FROM
  tenk1
  LEFT OUTER JOIN
    (
      SELECT
        tenk2.unique1
      FROM
        tenk2
      ORDER BY 1
      LIMIT 1000
    )
    AS ss
  ON tenk1.unique1 < ss.unique1 + 1
WHERE
  tenk1.unique1 < 2;

SELECT
  COUNT(*)
FROM
  tenk1
  LEFT OUTER JOIN
    (
      SELECT
        tenk2.unique1
      FROM
        tenk2
      ORDER BY 1
      LIMIT 1000
    )
    AS ss
  ON tenk1.unique1 < ss.unique1 + 1
WHERE
  tenk1.unique1 < 2;

ALTER TABLE tenk1
  SET (parallel_workers = 4);

ALTER TABLE tenk2
  RESET (parallel_workers);

RESET enable_material;

RESET enable_bitmapscan;

RESET enable_indexonlyscan;

RESET enable_indexscan;

SET enable_seqscan = off;

SET enable_indexscan = off;

SET enable_hashjoin = off;

SET enable_mergejoin = off;

SET enable_material = off;

DO
$$
BEGIN
 SET effective_io_concurrency = 50;
EXCEPTION WHEN invalid_parameter_value THEN
END $$;

SET work_mem = '64kB';

SELECT
  COUNT(*)
FROM
  tenk1,
  tenk2
WHERE
  tenk1.hundred > 1 AND tenk2.thousand = 0;

SELECT
  COUNT(*)
FROM
  tenk1,
  tenk2
WHERE
  tenk1.hundred > 1 AND tenk2.thousand = 0;

CREATE TABLE bmscantest (
  a INT,
  t TEXT
);

INSERT INTO bmscantest
SELECT
  r,
  'fooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo'
FROM
  generate_series(1, 100000) AS r;

CREATE INDEX "i_bmtest" ON bmscantest USING btree (a);

SELECT COUNT(*) FROM bmscantest WHERE a > 1;

RESET enable_seqscan;

ALTER TABLE tenk2
  SET (parallel_workers = 0);

SELECT
  COUNT(*)
FROM
  tenk1,
  tenk2
WHERE
  tenk1.hundred > 1 AND tenk2.thousand = 0;

ALTER TABLE tenk2
  RESET (parallel_workers);

RESET work_mem;

CREATE FUNCTION explain_parallel_sort_stats()
RETURNS SETOF TEXT
LANGUAGE "plpgsql"
AS '
declare ln text;
begin
    for ln in
        explain (analyze, timing off, summary off, costs off, buffers off)
          select * from
          (select ten from tenk1 where ten < 100 order by ten) ss
          right join (values (1),(2),(3)) v(x) on true
    loop
        ln := regexp_replace(ln, ''Memory: \S*'',  ''Memory: xxx'');
        return next ln;
    end loop;
end;
';

SELECT * FROM explain_parallel_sort_stats();

RESET enable_indexscan;

RESET enable_hashjoin;

RESET enable_mergejoin;

RESET enable_material;

RESET effective_io_concurrency;

DROP TABLE "bmscantest";

DROP FUNCTION explain_parallel_sort_stats();

SET enable_hashjoin = off;

SET enable_nestloop = off;

SELECT COUNT(*) FROM tenk1, tenk2 WHERE tenk1.unique1 = tenk2.unique1;

SELECT COUNT(*) FROM tenk1, tenk2 WHERE tenk1.unique1 = tenk2.unique1;

RESET enable_hashjoin;

RESET enable_nestloop;

ALTER TABLE tenk2
  SET (parallel_workers = 0);

SELECT * FROM tenk1 AS t1, tenk2 AS t2 WHERE t1.two > t2.two;

SELECT
  *
FROM
  tenk1 AS t1
  LEFT OUTER JOIN
    LATERAL (
      SELECT
        t1.unique1 AS x,
        *
      FROM
        tenk2 AS t2
      ORDER BY 1
    )
    AS t2
  ON TRUE
WHERE
  t1.two > t2.two;

ALTER TABLE tenk2
  RESET (parallel_workers);

SET enable_hashagg = 'false';

SELECT COUNT(*) FROM tenk1 GROUP BY twenty;

SELECT COUNT(*) FROM tenk1 GROUP BY twenty;

CREATE FUNCTION sp_simple_func(var1 INT)
RETURNS INT
AS '
begin
        return var1 + 10;
end;
'
LANGUAGE "plpgsql"
PARALLEL SAFE;

SELECT ten, sp_simple_func(ten) FROM tenk1 WHERE ten < 100 ORDER BY ten;

DROP FUNCTION sp_simple_func(INT);

SELECT COUNT(*), generate_series(1, 2) FROM tenk1 GROUP BY twenty;

SELECT COUNT(*), generate_series(1, 2) FROM tenk1 GROUP BY twenty;

SET parallel_leader_participation = off;

SELECT COUNT(*) FROM tenk1 GROUP BY twenty;

SELECT COUNT(*) FROM tenk1 GROUP BY twenty;

RESET parallel_leader_participation;

SET enable_material = 'false';

SELECT
  *
FROM
  (
    SELECT
      string4,
      COUNT(unique2)
    FROM
      tenk1
    GROUP BY string4
    ORDER BY string4
  )
  AS ss
  RIGHT OUTER JOIN
    (VALUES (1), (2), (3)) AS v (x)
  ON TRUE;

SELECT
  *
FROM
  (
    SELECT
      string4,
      COUNT(unique2)
    FROM
      tenk1
    GROUP BY string4
    ORDER BY string4
  )
  AS ss
  RIGHT OUTER JOIN
    (VALUES (1), (2), (3)) AS v (x)
  ON TRUE;

RESET enable_material;

RESET enable_hashagg;

SELECT AVG(CAST(unique1 AS BIGINT)) FROM tenk1;

SELECT AVG(CAST(unique1 AS BIGINT)) FROM tenk1;

SELECT fivethous FROM tenk1 ORDER BY fivethous LIMIT 4;

SELECT fivethous FROM tenk1 ORDER BY fivethous LIMIT 4;

SET max_parallel_workers = 0;

SELECT string4 FROM tenk1 ORDER BY string4 LIMIT 5;

SELECT string4 FROM tenk1 ORDER BY string4 LIMIT 5;

SET parallel_leader_participation = off;

SELECT string4 FROM tenk1 ORDER BY string4 LIMIT 5;

SELECT string4 FROM tenk1 ORDER BY string4 LIMIT 5;

RESET parallel_leader_participation;

RESET max_parallel_workers;

CREATE FUNCTION parallel_safe_volatile(a INT)
RETURNS INT
AS ' begin return a; end; '
PARALLEL SAFE
VOLATILE
LANGUAGE "plpgsql";

SELECT
  *
FROM
  tenk1
WHERE
  four = 2
ORDER BY four,
  hundred,
  parallel_safe_volatile(thousand);

SET min_parallel_index_scan_size = 0;

SET enable_seqscan = off;

SELECT
  *
FROM
  tenk1
WHERE
  four = 2
ORDER BY four,
  hundred,
  parallel_safe_volatile(thousand);

RESET min_parallel_index_scan_size;

RESET enable_seqscan;

SELECT COUNT(*) FROM tenk1 GROUP BY twenty, parallel_safe_volatile(two);

DROP FUNCTION parallel_safe_volatile(INT);

SAVEPOINT settings;

SET LOCAL debug_parallel_query = 1;

SELECT CAST(stringu1 AS SMALLINT) FROM tenk1 WHERE unique1 = 1;

ROLLBACK TO SAVEPOINT settings;

CREATE FUNCTION make_record(n INT)
RETURNS RECORD
LANGUAGE "plpgsql"
PARALLEL SAFE
AS '
BEGIN
  RETURN CASE n
           WHEN 1 THEN ROW(1)
           WHEN 2 THEN ROW(1, 2)
           WHEN 3 THEN ROW(1, 2, 3)
           WHEN 4 THEN ROW(1, 2, 3, 4)
           ELSE ROW(1, 2, 3, 4, 5)
         END;
END;
';

SAVEPOINT settings;

SET LOCAL debug_parallel_query = 1;

SELECT make_record(x) FROM (SELECT generate_series(1, 5) AS x) AS ss ORDER BY x;

ROLLBACK TO SAVEPOINT settings;

DROP FUNCTION make_record(INT);

DROP ROLE IF EXISTS regress_parallel_worker;

CREATE ROLE regress_parallel_worker;

SET ROLE TO regress_parallel_worker;

RESET session_authorization;

DROP ROLE regress_parallel_worker;

SET debug_parallel_query = 1;

SELECT COUNT(*) FROM tenk1;

RESET debug_parallel_query;

RESET role;

SELECT
  COUNT(*)
FROM
  tenk1 AS a
WHERE
  (unique1, two) IN
  (
    SELECT
      unique1,
      ROW_NUMBER() OVER ()
    FROM
      tenk1 AS b
  );

SELECT
  *
FROM
  tenk1 AS a
WHERE
  two IN
  (
    SELECT
      two
    FROM
      tenk1 AS b
    WHERE
      stringu1 LIKE '%AAAA'
    LIMIT 3
  );

SAVEPOINT settings;

SET LOCAL debug_parallel_query = 1;

SELECT * FROM tenk1;

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL debug_parallel_query = 1;

SELECT
  CAST(stringu1 || repeat('abcd', 5000)
  AS SMALLINT)
FROM
  tenk1
WHERE
  unique1 = 1;

ROLLBACK TO SAVEPOINT settings;

SAVEPOINT settings;

SET LOCAL parallel_setup_cost = 10;

SELECT
  unique1
FROM
  tenk1
WHERE
  fivethous = tenthous + 1
UNION ALL
SELECT
  unique1
FROM
  tenk1
WHERE
  fivethous = tenthous + 1;

ROLLBACK TO SAVEPOINT settings;

SELECT
  unique1
FROM
  tenk1
WHERE
  fivethous =
  (
    SELECT
      unique1
    FROM
      tenk1
    WHERE
      fivethous = 1
    LIMIT 1
  )
UNION ALL
SELECT
  unique1
FROM
  tenk1
WHERE
  fivethous =
  (
    SELECT
      unique2
    FROM
      tenk1
    WHERE
      fivethous = 1
    LIMIT 1
  )
ORDER BY 1;

SELECT * FROM information_schema.foreign_data_wrapper_options ORDER BY 1, 2, 3;

SELECT
  generate_series(1, two),
  ARRAY(SELECT generate_series(1, two))
FROM
  tenk1
ORDER BY tenthous;

SELECT
  unnest(CAST(ARRAY[] AS INT[])) + 1
  AS pathkey
FROM
  tenk1 AS t1
  INNER JOIN
    tenk1 AS t2
  ON TRUE
ORDER BY pathkey;

CREATE FUNCTION make_some_array(INT, INT)
RETURNS INT[]
AS 'declare x int[];
  begin
    x[1] := $1;
    x[2] := $2;
    return x;
  end'
LANGUAGE "plpgsql"
PARALLEL SAFE;

CREATE TABLE fooarr (
  f1 TEXT,
  f2 INT[],
  f3 TEXT
);

INSERT INTO fooarr VALUES ('1', ARRAY[1, 2], 'one');

PREPARE pstmt (TEXT, INT[]) AS SELECT * FROM fooarr WHERE f1 = $1 AND f2 = $2;;

EXPLAIN (COSTS 'off') EXECUTE pstmt ('1', make_some_array(1, 2));

EXECUTE pstmt ('1', make_some_array(1, 2));

DEALLOCATE pstmt;

CREATE VIEW tenk1_vw_sec
  WITH (security_barrier)
AS SELECT * FROM tenk1;

SELECT
  1
FROM
  tenk1_vw_sec
WHERE
  (
    SELECT
      SUM(f1)
    FROM
      int4_tbl
    WHERE
      f1 < unique1
  ) <
  100;

ROLLBACK;

BEGIN;

CREATE ROLE regress_parallel_worker;

SET SESSION AUTHORIZATION regress_parallel_worker;

SELECT current_setting('session_authorization');

SET debug_parallel_query = 1;

SELECT current_setting('session_authorization');

ROLLBACK;

CREATE ROLE regress_parallel_worker;

CREATE FUNCTION set_and_report_role()
RETURNS TEXT
AS ' select current_setting(''role'') '
LANGUAGE "sql"
PARALLEL SAFE
SET ROLE TO regress_parallel_worker;

CREATE FUNCTION set_role_and_error(INT)
RETURNS INT
AS ' select 1 / $1 '
LANGUAGE "sql"
PARALLEL SAFE
SET ROLE TO regress_parallel_worker;

SET debug_parallel_query = 0;

SELECT set_and_report_role();

SELECT set_role_and_error(0);

SET debug_parallel_query = 1;

SELECT set_and_report_role();

SELECT set_role_and_error(0);

RESET debug_parallel_query;

DROP FUNCTION set_and_report_role();

DROP FUNCTION set_role_and_error(INT);

DROP ROLE regress_parallel_worker;

BEGIN;

CREATE FUNCTION my_cmp(INT, INT)
RETURNS INT
LANGUAGE "sql"
AS '
	SELECT
		CASE WHEN $1 < $2 THEN -1
				WHEN $1 > $2 THEN  1
				ELSE 0
		END;
';

CREATE TABLE parallel_hang (i INT);

INSERT INTO parallel_hang SELECT * FROM generate_series(1, 400) AS gs;

CREATE OPERATOR CLASS int4_custom_ops
  FOR TYPE INT
  USING btree
  AS OPERATOR 1 < (INT, INT),
  OPERATOR 2 <= (INT, INT),
  OPERATOR 3 = (INT, INT),
  OPERATOR 4 >= (INT, INT),
  OPERATOR 5 > (INT, INT),
  FUNCTION 1 my_cmp(INT, INT);

CREATE UNIQUE INDEX "parallel_hang_idx"
ON parallel_hang
USING btree
(
  i int4_custom_ops
);

SET debug_parallel_query = 'on';

DELETE FROM parallel_hang WHERE 380 <= i AND i <= 420;

ROLLBACK;

SELECT pg_stat_force_next_flush();

SELECT
  parallel_workers_to_launch >
  'parallel_workers_to_launch_before'
  AS wrk_to_launch,
  parallel_workers_launched >
  'parallel_workers_launched_before'
  AS wrk_launched
FROM
  pg_stat_database
WHERE
  datname = current_database();
